makeODFmaps quantile percentages

--- a/RootInteractive/Tools/test_makePDFMaps.ipynb
+++ b/RootInteractive/Tools/test_makePDFMaps.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dframe = makePdfMaps(histo,slices,dimI)\n",
+    "dframe = makePdfMaps(histo,slices,dimI, quantiles=[25,50,75])\n",
     "dframe.sample(20)"
    ]
   },
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
