fix the meta data

--- a/RootInteractive/tutorial/bokehDraw/bokehDrawArray.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/bokehDrawArray.ipynb
@@ -20,7 +20,8 @@
     "\n",
     "df = pd.DataFrame(np.random.randint(0, 100, size=(100, 4)), columns=list('ABCD'))\n",
     "df.head(10)\n",
-    "df.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
+    "initMetadata(df)\n",
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
     "\n",
     "\n",
     "figureArray = [\n",
@@ -45,13 +46,6 @@
     "fig=bokehDraw.fromArray(df, \"A>0\", figureArray,widgets,tooltips=tooltips, layout=figureLayout)\n",
     "fig.verbosity=1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -70,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
