pytest skips ROOT required tests if ROOT is not exist

--- a/RootInteractive/Tools/test_makePDFMaps.ipynb
+++ b/RootInteractive/Tools/test_makePDFMaps.ipynb
@@ -4,37 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  N dismsional pipeline example\n",
-    "\n",
-    "* Generate random data with spread sigmaPoint in 4 D space\n",
-    "  * $ y=A\\, e^{B} \\sin{C} $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* make 5D histogram\n",
-    "  * using ./RootInteractive/Tools/histoNDTools.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* make statistic maps \n",
-    "* compare extracted statistic with the original function\n",
-    "  * residula histogram - stat - point\n",
-    "    ** rms should be ~ simgaPoint\n",
-    "  * residual hsitogram - statt - original function\n",
-    "    ** rms should be ~/sigmaPoint/sqrt(nPoints) per bin\n",
-    "  * values will be close to expectation in case sufficiennt number of bins\n",
-    "    * Sampling should be more than 1 sample per sigma (https://en.wikipedia.org/wiki/Nyquist%E2%80%93Shannon_sampling_theorem)\n",
-    "    * second derivative within bin should be negligible\n",
-    "    * for mean sigmaPoint>dvalue/dXidXj *dxidxj\n",
-    "    * for sigma  sigmaPoint>dvalue/dXi *dxi\n",
-    "    \n",
-    "    "
+    "#  N dismsional pipeline example"
    ]
   },
   {
@@ -69,6 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Generate random data with spread sigmaPoint in 4 D space\n",
+    "  * $ y=A\\, e^{B} \\sin{C} $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -90,6 +69,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* make 5D histogram\n",
+    "  * using ./RootInteractive/Tools/histoNDTools.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -103,6 +90,13 @@
    "metadata": {},
    "source": [
     "# Inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* make statistic maps "
    ]
   },
   {
@@ -123,6 +117,24 @@
    "source": [
     "dframe = makePdfMaps(histo,slices,dimI, quantiles=[25,50,75])\n",
     "dframe.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* compare extracted statistic with the original function\n",
+    "  * residula histogram - stat - point\n",
+    "    ** rms should be ~ simgaPoint\n",
+    "  * residual hsitogram - statt - original function\n",
+    "    ** rms should be ~/sigmaPoint/sqrt(nPoints) per bin\n",
+    "  * values will be close to expectation in case sufficiennt number of bins\n",
+    "    * Sampling should be more than 1 sample per sigma (https://en.wikipedia.org/wiki/Nyquist%E2%80%93Shannon_sampling_theorem)\n",
+    "    * second derivative within bin should be negligible\n",
+    "    * for mean sigmaPoint>dvalue/dXidXj *dxidxj\n",
+    "    * for sigma  sigmaPoint>dvalue/dXi *dxi\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -170,7 +182,6 @@
     "    [['CBinCenter'],['quantile_diff']]\n",
     "]\n",
     "tooltips = [(\"A\", \"(@ABinCenter)\"),(\"B\", \"(@BBinCenter)\"),(\"C\", \"(@CBinCenter)\"),(\"D\", \"(@DBinCenter)\"), ]\n",
-    "widgets='slider.CBinCenter(0,1,0.1,0,1)'\n",
     "figureLayout: str = '((0),(1),x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
     "bokehDrawSA.fromArray(dframe, \"ABinNumber>0\",figureArray, [], layout=figureLayout, tooltips=tooltips  )"
    ]
