--- a/RootInteractive/tutorial/distortionCase/pandaTools/distortionDraw.ipynb
+++ b/RootInteractive/tutorial/distortionCase/pandaTools/distortionDraw.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import ROOT\n",
+    "except ImportError:\n",
+    "    exit()\n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,10 +29,10 @@
    "outputs": [],
    "source": [
     "from RootInteractive.Tools.aliTreePlayer import *\n",
-    "from TTreeHnInteractive.TTreeHnBrowser import *\n",
     "from InteractiveDrawing.bokeh.bokehTools import *\n",
     "from InteractiveDrawing.bokeh.bokehDrawPanda import *\n",
     "from InteractiveDrawing.bokeh.bokehDraw import *\n",
+    "from TTreeHnInteractive.TTreeHnBrowser import *\n",
     "output_notebook()\n",
     "p3 = figure(plot_width=400, plot_height=250, title=\"template\")"
    ]
@@ -141,9 +154,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
