--- a/RootInteractive/MLpipeline/benchmarkRandomForest.ipynb
+++ b/RootInteractive/MLpipeline/benchmarkRandomForest.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis of results of the benchmarkRandomForest\n",
+    "* 0.) Intialization\n",
+    "* 1.) STD of function estimator\n",
+    "* 2.) Irreducible(+)Reducible error estimator\n",
+    "* 3.) RMSMean statistic estimator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,6 +36,7 @@
     "dfSummary=pickle.load(open( \"dfSummary.pkl\", \"rb\" ))\n",
     "dfSummary=dfSummary.astype(np.float64)\n",
     "dfSummary[\"n_trees\"]=dfSummary[\"group\"]*dfSummary[\"n_groups\"]\n",
+    "dfSummary[\"log2NPoints\"]=np.log2(dfSummary[\"nPoints\"])\n",
     "dfSummary[\"sigmaTail\"]=dfSummary[\"sigma\"]*np.sqrt(dfSummary[\"fraction\"]*100.+1.)\n",
     "dfSummary.sample(5)"
    ]
@@ -52,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## STD of function estimator\n",
+    "## 1.) STD of function estimator\n",
     "* absolute\n",
     "* normalized to standard RandomForest (mean over trees)\n",
     "* normalized to median RandomForest (mean over trees)"
@@ -66,27 +78,39 @@
    "source": [
     "output_file(\"bennchmarkRandomForest_fdeltaEstimatorsStd.html\")\n",
     "figureArray = [\n",
-    "    [[\"nPoints\"],[\"fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMeanMedStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedMedStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMeanStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedianStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMeanMedStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedMedStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMeanStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedianStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMeanMedStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"nPoints\"],[\"fdMedMedStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}]\n",
+    "    [[\"log2NPoints\"],[\"fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanMedStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedMedStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedianStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanMedStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedMedStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedianStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanMedStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedMedStd/fdMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedianStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMeanMedStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"fdMedMedStd/fdMedianStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}]\n",
     "]\n",
     "figureLayoutDesc = [\n",
     "        [0, 1, 2, 3,  {\"commonY\": 0, \"commonX\": 0}],\n",
     "        [4, 5, 6, 7,  {\"commonY\": 4, \"commonX\": 0}],\n",
     "        [8, 9, 10, 11,  {\"commonY\": 8, \"commonX\": 0}],\n",
+    "        [12, 13, 14, 15,  {\"commonY\": 12, \"commonX\": 0}],\n",
     "        {\"commonX\": 0, 'plot_height': 200, 'sizing_mode': 'scale_width', \"plot_width\": 1800}\n",
     "]\n",
     "fig = bokehDrawSA.fromArray(dfSummary, \"nPoints>0\", figureArray, widgetParams, tooltips=tooltips, layout=figureLayoutDesc,\n",
     "                                widgetLayout=widgetLayoutDesc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.) Irreducible(+)Reducible error estimator"
    ]
   },
   {
@@ -97,10 +121,10 @@
    "source": [
     "output_file(\"bennchmarkRandomForest_deltaEstimatorsStdvsExpectation.html\")\n",
     "figureArray = [\n",
-    "    [[\"log(nPoints)\"],[\"dMeanStd/RMSMean\"], {\"size\": 5, \"colorZvar\": \"sigmaTail\"}],\n",
+    "    [[\"log2NPoints\"],[\"dMeanStd/RMSMean\"], {\"size\": 5, \"colorZvar\": \"sigmaTail\"}],\n",
     "    [[\"sigmaTail\"],[\"dMeanStd/RMSMean\"], {\"size\": 5, \"colorZvar\": \"nPoints\"}],\n",
-    "    [[\"log(nPoints)\"],[\"dMeanStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"RMSMean/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"dMeanStd/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"RMSMean/sigmaTail\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
     "    [[\"sigmaTail\"],[\"dMeanStd\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
     "]  \n",
     "figureLayoutDesc = [\n",
@@ -114,6 +138,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.) RMSMean statistic estimator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -121,13 +152,13 @@
    "source": [
     "output_file(\"bennchmarkRandomForest_fdeltaEstimatorsStdvsExpectation.html\")\n",
     "figureArray = [\n",
-    "    [[\"log(nPoints)\"],[\"log(fdMeanStd/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"log(RMSMeanMean*sqrt(group)/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"log(fdMeanStd/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"(fdMeanStd/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"(RMSMeanMean*sqrt(group)/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"(fdMeanStd/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
-    "    [[\"log(nPoints)\"],[\"(RMSMean/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigmaTail\"}],\n",
+    "    [[\"log2NPoints\"],[\"log(fdMeanStd/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"log(RMSMeanMean*sqrt(group)/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"log(fdMeanStd/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"(fdMeanStd/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"(RMSMeanMean*sqrt(group)/sigmaTail)\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"(fdMeanStd/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"log2NPoints\"],[\"(RMSMean/(RMSMeanMean*sqrt(group)))\"], {\"size\": 5, \"colorZvar\": \"sigmaTail\"}],\n",
     "    [[\"RMSMean\"],[\"(RMSMeanMean*sqrt(group))\"], {\"size\": 5, \"colorZvar\": \"sigmaTail\"}],\n",
     "]  \n",
     "figureLayoutDesc = [\n",
