ATO-459 - adding options to AppendStatPandas+ extended benchmark

--- a/RootInteractive/MLpipeline/benchmarkRandomForest.ipynb
+++ b/RootInteractive/MLpipeline/benchmarkRandomForest.ipynb
@@ -22,7 +22,8 @@
     "import pickle\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
     "from RootInteractive.MLpipeline.NDFunctionInterface import *\n",
-    "from bokeh.io import output_notebook"
+    "from bokeh.io import output_notebook\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -141,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.) RMSMean statistic estimator"
+    "## 3.) RMSMeanMean statistic estimator"
    ]
   },
   {
@@ -169,6 +170,140 @@
     "]\n",
     "fig = bokehDrawSA.fromArray(dfSummary, \"nPoints>0\", figureArray, widgetParams, tooltips=tooltips, layout=figureLayoutDesc,\n",
     "                                widgetLayout=widgetLayoutDesc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.Sample studies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgetParamsS = [\n",
+    "    ['range', ['A']],\n",
+    "    ['range', ['B']],\n",
+    "    ['range', ['C']],\n",
+    "    ['range', ['csin']],\n",
+    "    ['range', ['expB']],\n",
+    "    ['range', ['sigma']],\n",
+    "    ['range', ['fraction']],\n",
+    "    ['range', ['group']],\n",
+    "    ['range', ['n_groups']],\n",
+    "    ['range', ['n_trees']]\n",
+    "]\n",
+    "\n",
+    "widgetLayoutDescS = [[0, 1, 2], [3, 4,5,6], [7, 8,9], {'sizing_mode': 'scale_width'}]\n",
+    "tooltipsS= [(\"A\", \"@A\"), (\"B\", \"@B\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSample=pickle.load(open( \"dfSample.pkl\", \"rb\" ))\n",
+    "dfSample=dfSample.astype(np.float64)\n",
+    "dfSample[\"n_trees\"]=dfSample[\"group\"]*dfSample[\"n_groups\"]\n",
+    "dfSample[\"log2NPoints\"]=np.log2(dfSample[\"nPoints\"])\n",
+    "dfSample[\"sigmaTail\"]=dfSample[\"sigma\"]*np.sqrt(dfSample[\"fraction\"]*100.+1.)\n",
+    "dfSample[\"afdeltaMed\"]=np.abs(dfSample[\"Median\"]-dfSample[\"valueOrig\"])\n",
+    "dfSample[\"afdeltaMean\"]=np.abs(dfSample[\"Mean\"]-dfSample[\"valueOrig\"])\n",
+    "dfSample[\"adeltaMed\"]=np.abs(dfSample[\"Median\"]-dfSample[\"value\"])\n",
+    "dfSample[\"adeltaMean\"]=np.abs(dfSample[\"Mean\"]-dfSample[\"value\"])\n",
+    "dfSample=dfSample.query(\"n_groups>5\")\n",
+    "display(dfSample.sample(5))\n",
+    "dfSample.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file(\"bennchmarkRandomForest_fdeltaEstimatorsStdvsExpectationSample.html\")\n",
+    "figureArray = [\n",
+    "    [[\"RMSMean\"],[\"Mean-valueOrig\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"RMSMean\"],[\"Median-valueOrig\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "    [[\"sigma\"],[\"RMSMedian\"], {\"size\": 5, \"colorZvar\": \"fraction\"}],\n",
+    "    [[\"sigmaTail\"],[\"RMSMedian\"], {\"size\": 5, \"colorZvar\": \"fraction\"}],\n",
+    "    [[\"ccos*expB\"],[\"RMSMedian\"], {\"size\": 5, \"colorZvar\": \"sigma\"}],\n",
+    "]  \n",
+    "figureLayoutDesc = [\n",
+    "        [0,1, {\"commonX\": 0, \"commonY\": 0}],\n",
+    "        [2,3,4, {\"commonY\": 0}],\n",
+    "        \n",
+    "    { 'plot_height': 300, 'sizing_mode': 'scale_width', \"plot_width\": 1800}\n",
+    "]\n",
+    "fig = bokehDrawSA.fromArray(dfSample.sample(10000), \"RMS>0\", figureArray, widgetParamsS, tooltips=tooltipsS, layout=figureLayoutDesc,\n",
+    "                                widgetLayout=widgetLayoutDescS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSampleS=dfSample.query(\"n_groups>20\")\n",
+    "sns.regplot(x=dfSampleS[\"RMSMean\"], y=dfSampleS[\"afdeltaMean\"], x_bins=20, fit_reg=None, label=\"Mean\",x_estimator=np.mean)\n",
+    "sns.regplot(x=dfSampleS[\"RMSMean\"], y=dfSampleS[\"afdeltaMed\"], x_bins=20, fit_reg=None,  label=\"Median\",x_estimator=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSampleS=dfSample.query(\"n_groups>20\")\n",
+    "sns.regplot(x=dfSampleS[\"RMSMean\"], y=dfSampleS[\"adeltaMean\"], x_bins=20, fit_reg=None, label=\"Mean\",x_estimator=np.mean)\n",
+    "sns.regplot(x=dfSampleS[\"RMSMean\"], y=dfSampleS[\"adeltaMed\"], x_bins=20, fit_reg=None,  label=\"Median\",x_estimator=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.regplot(x=dfSample[\"RMSMean\"], y=dfSample[\"afdeltaMeanNorm\"], x_bins=20, fit_reg=None, label=\"Mean\",x_estimator=np.mean)\n",
+    "sns.regplot(x=dfSample[\"RMSMean\"], y=dfSample[\"afdeltaMedNorm\"], x_bins=20, fit_reg=None,  label=\"Median\",x_estimator=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local error estimator for fixed input smearing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSampleS0=dfSampleS.query(\"sigma==0.1&fraction==0\")\n",
+    "sns.regplot(x=dfSampleS0[\"RMSMean\"], y=dfSampleS0[\"afdeltaMean\"], x_bins=20, fit_reg=None, label=\"Mean\",x_estimator=np.mean)\n",
+    "sns.regplot(x=dfSampleS0[\"RMSMean\"], y=dfSampleS0[\"afdeltaMed\"], x_bins=20, fit_reg=None,  label=\"Median\",x_estimator=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.regplot(x=np.abs(dfSampleS0[\"ccos\"])*dfSampleS0[\"expB\"], y=dfSampleS0[\"adeltaMean\"], x_bins=20, fit_reg=None,x_estimator=np.mean)\n",
+    "sns.regplot(x=np.abs(dfSampleS0[\"ccos\"])*dfSampleS0[\"expB\"], y=dfSampleS0[\"adeltaMean\"], x_bins=20, fit_reg=None,x_estimator=np.mean)"
    ]
   },
   {
