--- a/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
+++ b/RootInteractive/tutorial/MLpipeline/NDRegressionDemo.ipynb
@@ -28,10 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ROOT\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from root_pandas import *\n",
     "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
     "from RootInteractive.MLpipeline.NDFunctionInterface import  DataContainer, Fitter\n",
     "from bokeh.io import output_notebook\n",
@@ -55,15 +53,16 @@
    "outputs": [],
    "source": [
     "npoints=10000\n",
-    "df = pd.DataFrame(np.random.random_sample(size=(npoints, 4)), columns=list('ABCD'))\n",
-    "df[\"noise\"]=np.random.normal(0, 0.1, npoints)\n",
-    "df[\"csin\"]=np.sin(6.28*df[\"C\"])\n",
-    "df[\"valueOrig\"]=df[\"A\"]+np.exp(3*df[\"B\"])*df[\"csin\"]\n",
-    "df[\"value\"]=df[\"valueOrig\"]+df[\"noise\"]\n",
-    "df.to_root('ABCD.root',\"ABCD\")\n",
-    "f= ROOT.TFile(\"ABCD.root\")\n",
-    "tree=f.Get(\"ABCD\")\n",
-    "#tree.Show(0)"
+    "sigma=0.2\n",
+    "tailWidth=10\n",
+    "tailFraction=0\n",
+    "df = pd.DataFrame(np.random.random_sample(size=(nPoints, 4)), columns=list('ABCD'))\n",
+    "df[\"noise\"] =  np.random.normal(0, sigma, nPoints)*(tailWidth*(np.random.random(npoints)<tailFraction)+1)\n",
+    "df[\"csin\"]  = np.sin(6.28 * df[\"C\"])\n",
+    "df[\"ccos\"]  = np.cos(6.28 * df[\"C\"])\n",
+    "df[\"valueOrig\"] = 3 * df[\"A\"] + np.exp(2 * df[\"B\"]) * df[\"csin\"]\n",
+    "df[\"value\"] = df[\"valueOrig\"] + df[\"noise\"]\n",
+    "df[\"expB\"] =np.exp(2 * df[\"B\"])\n"
    ]
   },
   {
@@ -114,7 +113,7 @@
     "fitter.Register_Method('KNN','KNeighbors', 'Regressor')\n",
     "fitter.Register_Method('RF','RandomForest', 'Regressor', n_estimators=100, max_depth=10)\n",
     "fitter.Register_Method('RF200','RandomForest', 'Regressor', n_estimators=200, max_depth=10)\n",
-    "fitter.Register_Method('KM','KerasModel', 'Regressor', layout = [50, 50, 50], epochs=100, dropout=0.2)\n",
+    "#fitter.Register_Method('KM','KerasModel', 'Regressor', layout = [50, 50, 50], epochs=100, dropout=0.2)\n",
     "fitter.Fit()\n",
     "test=dataContainer.Test_sample"
    ]
@@ -133,7 +132,7 @@
    "outputs": [],
    "source": [
     "#fitter.Compress('KM')\n",
-    "for method in ['RF', 'KNN', 'RF200', 'KM']: \n",
+    "for method in ['RF', 'KNN', 'RF200']: \n",
     "    test = fitter.AppendOtherPandas(method,test)\n",
     "fitter.AppendStatPandas(\"RF\",test)\n",
     "fitter.AppendStatPandas(\"RF200\",test)\n",
@@ -270,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
