Added more use cases to client side ND histogram

--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -63,8 +63,8 @@
     "df[\"DDC\"]=((df.D*4).round(0)).astype(int).map(mapDDC)\n",
     "df['errY']=df.A*0.02+0.02\n",
     "df.head(10)\n",
-    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\",\n",
-    "                    'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\"}\n"
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm)\", 'C.AxisTitle': \"C (s)\",\n",
+    "                    'D.AxisTitle': \"D (cm)\", 'Bool.AxisTitle': \"A>half\"}\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "      * varaibles\n",
     "      * nbins - sclar in array\n",
     "      * ranges [max,min] 0 in case not specified minimum maximum of data points for current selection  used\n",
-    "      * qunatiles, sum_range\n",
+    "      * qunatiles, sum_range, axis\n",
     "         * parameters of agreagation function"
    ]
   },
@@ -115,22 +115,16 @@
     "    ['range', ['B', 0, 1, 0.1, 0, 1]],\n",
     "    ['range', ['C'], {'type': 'minmax'}],\n",
     "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
-    "    ['multiSelect', [\"DDC\"]],\n",
-    "    ['select',[\"CC\", 0, 1, 2, 3]],\n",
     "    ['multiSelect',[\"BoolB\"]],\n",
     "]\n",
-    "widgetLayoutDesc=[[0, 1, 2], [3, 4], [5, 6], {'sizing_mode': 'scale_width'}]\n",
-    "\n",
-    "figureLayoutDesc=[\n",
-    "    [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
-    "    {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
-    "]\n",
+    "widgetLayoutDesc=[[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}]\n",
     "\n",
     "histoArray = [\n",
     "    {\"name\": \"histoA\", \"variables\": [\"A\"], \"nbins\":20, \"quantiles\": [.05, .5, .95], \"sum_range\": [[.25, .75], [.4, .6]]},\n",
     "    {\"name\": \"histoB\", \"variables\": [\"B\"], \"nbins\":20, \"range\": [0, 1]},\n",
-    "    {\"name\": \"histoTransform\", \"variables\": [\"(A+B)/2\"],\"nbins\":20, \"sum_range\": [[.25, .75]]},\n",
-    "    {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"weights\": \"D\"},\n",
+    "    {\"name\": \"histoTransform\", \"variables\": [\"(A+B)/2\"], \"nbins\": 20, \"weights\": \"A*C\"},\n",
+    "    {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"weights\": \"D\", \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]},\n",
+    "    {\"name\": \"histoABC\", \"variables\": [\"A\", \"B\", \"C\"], \"nbins\": [8, 10, 12], \"weights\": \"D\", \"axis\": [0, 2], \"sum_range\": [[.25, .75]]},\n",
     "]"
    ]
   },
@@ -156,8 +150,13 @@
     "        [['B'], ['histoB', '(C+B)*10', '(C-B)*10'], {\"size\": 7, \"colorZvar\": \"C\", \"errY\": \"errY\",\n",
     "                                                    \"rescaleColorMapper\": True}]\n",
     "    ]\n",
+    "    figureLayoutDesc=[\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "    ]\n",
+    "    \n",
     "    xxx=bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
-    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointsRender=3000, histogramArray=histoArray)\n",
+    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray)\n",
     "testBokehClientHistogram()"
    ]
   },
@@ -179,7 +178,7 @@
     "    figureArray = [\n",
     "        [['A'], ['histoA']],\n",
     "        [['A'], ['histoAB'], {\"visualization_type\": \"colZ\", \"show_histogram_error\": True}],\n",
-    "        [['A'], ['histoAB']],\n",
+    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
     "        [['B'], ['histoTransform'], {\"flip_histogram_axes\": True}],\n",
     "        [\"tableHisto\", {\"rowwise\": True}]\n",
     "    ]\n",
@@ -195,6 +194,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example with 2D histogram and projections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testBokehClientHistogramProfileA():\n",
+    "    output_file(\"test_BokehClientHistogramProfileA.html\")\n",
+    "    figureArray = [\n",
+    "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_0', 'histoAB_1.quantile_1', 'histoAB_1.quantile_2']],\n",
+    "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_1', 'histoAB_1.mean']],\n",
+    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
+    "        [['histoAB_1.bin_center_0'], ['histoAB_1.std']],\n",
+    "        [\"tableHisto\", {\"rowwise\": False}]\n",
+    "    ]\n",
+    "    figureLayoutDesc=[\n",
+    "        [0, 1,  {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
+    "        [2, 3, {'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
+    "        [4, {'plot_height': 40}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2, \"size\": 5}\n",
+    "    ]\n",
+    "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
+    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
+    "\n",
+    "def testBokehClientHistogramProfileB():\n",
+    "    output_file(\"test_BokehClientHistogramProfileB.html\")\n",
+    "    figureArray = [\n",
+    "        [['histoAB_0.quantile_0', 'histoAB_0.quantile_1', 'histoAB_0.quantile_2'], ['histoAB_0.bin_center_1']],\n",
+    "        [['histoAB_0.quantile_1', 'histoAB_0.mean'], ['histoAB_0.bin_center_1']],\n",
+    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
+    "        [['histoAB_0.std'], ['histoAB_0.bin_center_1']],\n",
+    "        [\"tableHisto\", {\"rowwise\": False}]\n",
+    "    ]\n",
+    "    figureLayoutDesc=[\n",
+    "        [0, 1,  {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
+    "        [2, 3, {'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
+    "        [4, {'plot_height': 40}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2, \"size\": 5}\n",
+    "    ]\n",
+    "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
+    "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
+    "\n",
+    "testBokehClientHistogramProfileA()\n",
+    "testBokehClientHistogramProfileB()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example with projections of a 3D histogram into 2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def testBokehClientHistogram3d():\n",
+    "    output_file(\"test_BokehClientHistogram.html\")\n",
+    "    figureArray = [\n",
+    "        [['histoABC_0.bin_center_1'], ['histoABC_0.mean'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
+    "        [['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
+    "        [['histoABC_0.bin_center_1'], ['histoABC_0.std'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}]\n",
+    "    ]\n",
+    "    figureLayoutDesc=[\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "    ]\n",
+    "    \n",
+    "    xxx=bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
+    "                              widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", nPointRender=3000, histogramArray=histoArray)\n",
+    "testBokehClientHistogram3d()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -204,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
