Cleaned up the notebook

--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -32,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,22 +127,17 @@
     "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
     "    ['multiSelect',[\"BoolB\"]],\n",
     "]\n",
-    "widgetLayoutDesc=[[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}]\n",
-    "\n",
-    "histoArray = [\n",
-    "    {\"name\": \"histoA\", \"variables\": [\"A\"], \"nbins\":20, \"quantiles\": [.05, .5, .95], \"sum_range\": [[.25, .75], [.4, .6]]},\n",
-    "    {\"name\": \"histoB\", \"variables\": [\"B\"], \"nbins\":20, \"range\": [0, 1]},\n",
-    "    {\"name\": \"histoTransform\", \"variables\": [\"(A+B)/2\"], \"nbins\": 20, \"weights\": \"A*C\"},\n",
-    "    {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"weights\": \"D\", \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]},\n",
-    "    {\"name\": \"histoABC\", \"variables\": [\"A\", \"B\", \"C\"], \"nbins\": [8, 10, 12], \"weights\": \"D\", \"axis\": [0, 2], \"sum_range\": [[.25, .75]]},\n",
-    "]"
+    "widgetLayoutDesc=[[0, 1, 2], [3, 4], {'sizing_mode': 'scale_width'}]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple drawing without table and with original data superimposed"
+    "# Simple drawing without table and with original data superimposed\n",
+    "* A, B and C from uniform distribution\n",
+    "* histograms of A, B\n",
+    "* histogram of (A+B)/2 with weights A*C"
    ]
   },
   {
@@ -143,6 +148,11 @@
    "source": [
     "def testBokehClientHistogram():\n",
     "    output_file(\"test_BokehClientHistogram.html\")\n",
+    "    histoArray = [\n",
+    "        {\"name\": \"histoA\", \"variables\": [\"A\"], \"nbins\":20, \"quantiles\": [.05, .5, .95], \"sum_range\": [[.25, .75], [.4, .6]]},\n",
+    "        {\"name\": \"histoB\", \"variables\": [\"B\"], \"nbins\":20, \"range\": [0, 1]},\n",
+    "        {\"name\": \"histoTransform\", \"variables\": [\"(A+B)/2\"], \"nbins\": 20, \"weights\": \"A*C\"},\n",
+    "    ]\n",
     "    figureArray = [\n",
     "        #   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
     "        [['A'], ['histoA', '(A*A-C*C)*100'], {\"size\": 2, \"colorZvar\": \"A\", \"errY\": \"errY\", \"errX\": \"0.01\"}],\n",
@@ -175,18 +185,21 @@
    "source": [
     "def testBokehClientHistogramRowwiseTable():\n",
     "    output_file(\"test_BokehClientHistogramRowwiseTable.html\")\n",
+    "    histoArray = [\n",
+    "        {\"name\": \"histoA\", \"variables\": [\"A\"], \"nbins\":20, \"quantiles\": [.05, .5, .95], \"sum_range\": [[.25, .75], [.4, .6]]},\n",
+    "        {\"name\": \"histoB\", \"variables\": [\"B\"], \"nbins\":20, \"range\": [0, 1]},\n",
+    "        {\"name\": \"histoTransform\", \"variables\": [\"(A+B)/2\"], \"nbins\": 20, \"weights\": \"A*C\"},\n",
+    "    ]\n",
     "    figureArray = [\n",
     "        [['A'], ['histoA']],\n",
-    "        [['A'], ['histoAB'], {\"visualization_type\": \"colZ\", \"show_histogram_error\": True}],\n",
-    "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
-    "        [['B'], ['histoTransform'], {\"flip_histogram_axes\": True}],\n",
+    "        [['B'], ['histoB'], {\"show_histogram_error\": True}],\n",
+    "        [['(A+B)/2'], ['histoTransform'], {\"yAxisTitle\": \"sum A*C\"}],\n",
     "        [\"tableHisto\", {\"rowwise\": True}]\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
-    "        [0, 1,  {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
-    "        [2, 3, {'y_visible': 1, 'x_visible':1, 'plot_height': 200}],\n",
-    "        [4, {'plot_height': 40}],\n",
-    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2, \"size\": 5}\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        [3],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
     "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
@@ -194,10 +207,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example with 2D histogram and projections"
+    "# Example with 2D histogram and projections\n",
+    "*  Uniform distribution in varable A,B\n",
+    "* showing histogram of A vs (A+B)/2, mean, median, RMS, quantiles of (A+B/2) as a function of A"
    ]
   },
   {
@@ -208,6 +230,9 @@
    "source": [
     "def testBokehClientHistogramProfileA():\n",
     "    output_file(\"test_BokehClientHistogramProfileA.html\")\n",
+    "    histoArray = [\n",
+    "        {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]}\n",
+    "    ]\n",
     "    figureArray = [\n",
     "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_0', 'histoAB_1.quantile_1', 'histoAB_1.quantile_2']],\n",
     "        [['histoAB_1.bin_center_0'], ['histoAB_1.quantile_1', 'histoAB_1.mean']],\n",
@@ -223,9 +248,29 @@
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
     "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
-    "\n",
+    "testBokehClientHistogramProfileA()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example with 2D histogram and projections\n",
+    "*  Uniform distribution in varable A,B\n",
+    "* showing histogram of A vs (A+B)/2, mean, median, RMS, quantiles of A as a function of (A+B)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def testBokehClientHistogramProfileB():\n",
     "    output_file(\"test_BokehClientHistogramProfileB.html\")\n",
+    "    histoArray = [\n",
+    "        {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"weights\": \"D\", \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]}\n",
+    "    ]\n",
     "    figureArray = [\n",
     "        [['histoAB_0.quantile_0', 'histoAB_0.quantile_1', 'histoAB_0.quantile_2'], ['histoAB_0.bin_center_1']],\n",
     "        [['histoAB_0.quantile_1', 'histoAB_0.mean'], ['histoAB_0.bin_center_1']],\n",
@@ -241,8 +286,6 @@
     "    ]\n",
     "    xxx = bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=figureLayoutDesc, tooltips=tooltips,\n",
     "                                widgetLayout=widgetLayoutDesc, sizing_mode=\"scale_width\", histogramArray=histoArray)\n",
-    "\n",
-    "testBokehClientHistogramProfileA()\n",
     "testBokehClientHistogramProfileB()"
    ]
   },
@@ -250,7 +293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example with projections of a 3D histogram into 2D"
+    "# Example with projections of a 3D histogram into 2D\n",
+    "*  Uniform distribution in varable A,B,C, weighted 3D histogram of (A+C)/2, B, C with D as weights\n",
+    "* showing mean and rms in (A+C)/2 as function of B with C bin center as a color"
    ]
   },
   {
@@ -261,13 +306,16 @@
    "source": [
     "def testBokehClientHistogram3d():\n",
     "    output_file(\"test_BokehClientHistogram.html\")\n",
+    "    histoArray = [\n",
+    "        {\"name\": \"histoABC\", \"variables\": [\"(A+C)/2\", \"B\", \"C\"], \"nbins\": [8, 10, 12], \"weights\": \"D\", \"axis\": [0], \"sum_range\": [[.25, .75]]},\n",
+    "    ]\n",
     "    figureArray = [\n",
     "        [['histoABC_0.bin_center_1'], ['histoABC_0.mean'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
-    "        [['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
+    "        #[['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
     "        [['histoABC_0.bin_center_1'], ['histoABC_0.std'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}]\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
-    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        [0, 1, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
     "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
     "    ]\n",
     "    \n",
@@ -286,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
